# DSUWithData

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
.github/workflows/: c-cpp.yml
lib/: CMakeLists.txt  DSUWithData.hpp  DefaultDSUData.hpp
samples/: float_avg_dsu_sample.cpp  greatest_element_dsu_data.hpp  simple_dsu_sample.cpp  test_dsu_data.hpp
src/: DSUWithData.hpp  DefaultDSUData.hpp
test/: CMakeLists.txt  custom_data_tests.cpp  default_data_tests.cpp  test.cpp
test/samples/: greatest_element_dsu_data.hpp  test_dsu_data.hpp
